--- a/src/app/components/menuAdmin/menuAdmin.html
+++ b/src/app/components/menuAdmin/menuAdmin.html
@@ -7,7 +7,7 @@
           <div layout-md="column" layout-lg="row">
             <div flex>
               <md-button ui-sref="comites">
-                <md-card>
+                <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
                       <span class="md-headline">Lista</span>
@@ -15,7 +15,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/user1.png"></img></center>
+                        <center><img style="width: 80px" src="/assets/img/comite.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -24,7 +24,7 @@
             </div>
             <div flex>
               <md-button ui-sref="registroComite">
-                <md-card>
+                <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
                       <span class="md-headline">Registro</span>
@@ -32,7 +32,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/house.png"></img></center>
+                        <center><img style="width: 80px" src="/assets/img/registrocomite.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
