--- a/src/app/components/toolbar/toolbar.html
+++ b/src/app/components/toolbar/toolbar.html
@@ -52,6 +52,11 @@
             Cerrar Sesión
           </md-button>
         </div>
+        <div layout="column">
+          <center>
+            <img class="logo" src="/assets/img/intentodelogo.png">
+          </center>
+        </div>
       </div>
     </div>
   </md-sidenav>
