--- a/src/app/components/registro/actualizarCliente.html
+++ b/src/app/components/registro/actualizarCliente.html
@@ -72,10 +72,12 @@
       <div layout="row" layout-align="center center" flex layout-xs="column" class="datos">
         <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.actualizarcliente(vm.cliente)">Actualizar Cliente</md-button>
       </div>
-      <!--<div layout="row" layout-align="end center" flex layout-xs="column">
-        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="tabla">Volver</md-button>
-      </div>-->
-      <div layout="row" layout-align="end center" flex layout-xs="column">
+      <div layout="row" layout-align="end center" flex layout-xs="column" ng-if="vm.usuario.superadmin == 1">
+        <md-button class="md-icon-button md-raised" layout-fill ui-sref="comiteView">
+          <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+        </md-button>
+      </div> 
+      <div layout="row" layout-align="end center" flex layout-xs="column" ng-if="vm.usuario.superadmin == 0">
         <md-button class="md-icon-button md-raised" layout-fill ui-sref="tabla">
           <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
         </md-button>
