--- a/src/app/components/viviendaCliente/viviendaCliente.html
+++ b/src/app/components/viviendaCliente/viviendaCliente.html
@@ -46,7 +46,7 @@
               <td md-cell>{{ viviend.id }}</td>
               <td md-cell>{{ viviend.cliente.nombre + ' ' + viviend.cliente.apellido_pater + ' ' + viviend.cliente.apellido_mater }}</td>
               <td md-cell>{{ viviend.vivienda.direccion}}</td>
-              <td md-cell>{{ viviend.fecha_adquisicion }}</td>
+              <!--<td md-cell>{{ viviend.fecha_adquisicion }}</td>-->
             </tr>
           </tbody>
         </table>
