arreglo inicio sesión

--- a/src/app/components/registroComite/registroComite.html
+++ b/src/app/components/registroComite/registroComite.html
@@ -26,6 +26,9 @@
           </div>
         </div>
       </div>
+      <md-button class="md-primary md-raised" ng-click="showAlert($event)">
+        Solo para probar
+      </md-button><br>
       <div layout="row" layout-align="center center" flex layout-xs="column" class="datos">
         <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearcomite(vm.comite)">Registrar Comité</md-button>
       </div> 
