--- a/src/app/components/menuAdmin/menuAdmin.html
+++ b/src/app/components/menuAdmin/menuAdmin.html
@@ -10,12 +10,11 @@
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Lista</span>
-                      <span class="md-headline">Comités</span>
+                      <span class="md-headline" style="margin-top: 10px;">Comités</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/comite.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/comite.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -27,12 +26,12 @@
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro</span>
-                      <span class="md-headline">Comités</span>
+                      <span class="md-headline">Registrar</span>
+                      <span class="md-headline">Comité</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/registrocomite.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/registrocomite.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
