--- a/src/app/components/registroComite/actualizarComite.html
+++ b/src/app/components/registroComite/actualizarComite.html
@@ -15,7 +15,7 @@
               <input ng-model="vm.comite.nombre" type="">
             </md-input-container>
           </div>
-          <div flex>
+          <!--<div flex>
             <md-input-container md-no-float class="md-block">
               <label>Comuna</label>
               <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
@@ -23,7 +23,7 @@
                 <md-option ng-repeat="comu in vm.comuna | orderBy : 'id'" value="{{ comu.id }}">{{ comu.des_comu }}</md-option>
               </md-select>
             </md-input-container>
-          </div>
+          </div>-->
         </div>
       </div>
       <div layout="row" layout-align="center center" flex layout-xs="column" class="datos">
