--- a/src/app/components/comiteView/comiteView.html
+++ b/src/app/components/comiteView/comiteView.html
@@ -19,14 +19,14 @@
             <h3 style="text-align: center;" class="ima">Comuna: <strong>{{ vm.comuna_id }}</strong></h3>
           </div>
         </div>
-        <div flex layout="column" layout-xs="column" layout-align="center center" class="fond" style="background-color: #B0DFEE;">
-          <div layout="row" layout-xs="column">
+        <div flex="30" flex-xs="100" flex-offset-xs="0" flex-sm="50" flex-offset-sm="0" flex-md="50" flex-offset-md="0" layout="column" layout-xs="column" layout-align="center center" class="fond" style="background-color: #B0DFEE;">
+          <div layout="column" layout-xs="column">
             <div flex>
               <md-button ui-sref="menuRegistros">
                 <md-card class="md-whiteframe-8dp mdcardbutton">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline textocard">Registros</span>
+                      <span class="md-headline textocard">Registrar</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
@@ -54,89 +54,7 @@
               </md-button>
             </div>
           </div>
-          <div flex="40" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
-            <div flex flex-xs="90" flex-offset-xs="5">
-              <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
-                <center>
-                  <h2>Buscar Clientes</h2>
-                  <h4>INGRESE NOMBRE DEL CLIENTE</h4>
-                </center>
-              </div>  
-              <div flex layout="row">
-                <div flex="40" flex-offset="20" flex-xs="60" flex-offset-xs="10"> 
-                  <md-input-container>
-                    <input ng-model="vm.datocliente" type="text" placeholder="Buscar...">
-                  </md-input-container>
-                </div> 
-                <div flex=10 flex-xs="20">
-                  <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datocliente)">
-                      <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
-                  </md-button>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-      
-      <hr style="border:15px; background-color: #83CEF6; border-radius: 15px;">
-      
-      <div layout="row" flex layout-xs="column">
-        <md-button class="md-icon-button md-raised" layout-fill ui-sref="comites" style="margin-bottom: 10px;">
-          <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
-        </md-button>
-      </div>
-      <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
-        <md-table-container>
-          <table md-table md-row-select multiple md-progress="promise">
-            <thead md-head md-order="query.order" md-on-reorder="getDesserts">
-              <tr md-row>
-                <th md-column md-numeric>ID</th>
-                <th md-column md-numeric>RUT</th>
-                <th md-column md-numeric>Nombre</th>
-                <th md-column md-numeric>Apellidos</th>
-                <th md-column md-numeric>Telefono</th>
-                <th md-column md-numeric>Email</th>
-                <th md-column md-numeric>Residencia</th>
-                <th md-column md-numeric></th>
-                <th md-column md-numeric></th>
-                <th md-column md-numeric></th>
-              </tr>
-            </thead>
-            <tbody md-body>
-              <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="comit in vm.datosCliente">
-                <td md-cell>{{ comit.id }}</td>
-                <td md-cell>{{ comit.rut_cliente }}</td>
-                <td md-cell>{{ comit.nombre }}</td>
-                <td md-cell>{{ comit.apellido_pater + ' ' + comit.apellido_mater }}</td>
-                <td md-cell>{{ comit.telefono }}</td>
-                <td md-cell>{{ comit.email }}</td>
-                <td md-cell>{{ comit.residencia }}</td>
-                <td md-cell>
-                  <md-button class="md-icon-button" ng-click="vm.vercliente($index)" style="margin-right: -40px;">
-                    <md-icon  md-svg-icon="/assets/img/profile1.svg"></md-icon>
-                  </md-button>
-                </td>
-                <td md-cell>
-                  <md-button class="md-icon-button" ng-click="vm.updatecliente(comit.id)" style="margin-right: -40px;">
-                    <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
-                  </md-button>
-                </td>
-                <td md-cell>
-                  <md-button class="md-icon-button" ng-click="vm.eliminarcliente(comit.id)" style="margin-right: -25px;">
-                    <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
-                  </md-button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </md-table-container>
-        <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
-      </div>
-      <div layout="row" flex layout-xs="column">
-        <md-button class="md-icon-button md-raised" layout-fill ui-sref="comites" style="margin-bottom: 10px;">
-          <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
-        </md-button>
       </div>
     </div>
   </div>
