--- a/src/app/components/menuListas/menuListas.html
+++ b/src/app/components/menuListas/menuListas.html
@@ -5,7 +5,7 @@
         <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
       </md-button>
     </div>
-    <div layout-padding flex layout="column">
+    <div layout-padding flex layout="column" style="margin-top: -40px;">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <div layout="column" layout-sm="column" layout-xs="column">
 
@@ -20,7 +20,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/searchuser.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/searchuser.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -37,7 +37,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/searchhouse.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/searchhouse.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -54,7 +54,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/userhouse1.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/userhouse1.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -74,7 +74,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/searchmedidor.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/searchmedidor.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -91,7 +91,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/ticket.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/ticket.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -108,7 +108,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/invoice.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/invoice.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -128,7 +128,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/ticket.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/ticket.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
