--- a/src/app/components/menuRegistros/menuRegistros.html
+++ b/src/app/components/menuRegistros/menuRegistros.html
@@ -5,22 +5,43 @@
         <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
       </md-button>
     </div>
-    <div layout-padding flex layout="column">
+    <div layout-padding flex layout="column" style="margin-top: -40px;">
       <div layout-xs="column" layout-xs="column" layout-lg="row" layout="row" layout-align="center center">
         <div layout="column" layout-sm="column" layout-xs="column">
         
+          <div layout-md="column" layout-lg="row">
+            <div flex>
+              <md-button ui-sref="registroRapidoVivienda">
+                <md-card class="md-whiteframe-8dp">
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Rápido</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 60px" src="/assets/img/fast.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+          </div>
+          <br>
+
           <div layout-md="column" layout-lg="row">
             <div flex>
               <md-button ui-sref="registro">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Registrar</span>
                       <span class="md-headline">Clientes</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/user1.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/user1.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -32,12 +53,12 @@
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Registrar</span>
                       <span class="md-headline">Vivienda</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/house.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/house.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -54,7 +75,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/userhouse.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/userhouse.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -62,19 +83,19 @@
               </md-button>
             </div>
           </div>
-          
+
           <div layout-md="column" layout-lg="row">
             <div flex>
               <md-button ui-sref="registromedidor">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Registrar</span>
                       <span class="md-headline">Medidor</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/medidor.svg"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/medidor.svg"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -91,7 +112,7 @@
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/calendar.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/calendar.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -103,12 +124,12 @@
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Registrar</span>
                       <span class="md-headline">Pagos</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/pago1.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/pago1.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
@@ -116,19 +137,19 @@
               </md-button>
             </div> 
           </div>
-          
+
           <div layout-md="column" layout-lg="row">
             <div flex>
               <md-button ui-sref="abonoBoleta">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Registrar</span>
                       <span class="md-headline">Abono</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
-                        <center><img style="width: 80px" src="/assets/img/payment.png"></img></center>
+                        <center><img style="width: 60px" src="/assets/img/payment.png"></img></center>
                       </div>
                     </md-card-title-media>
                   </md-card-title>
