--- a/src/app/components/registroComite/registroComite.html
+++ b/src/app/components/registroComite/registroComite.html
@@ -3,7 +3,7 @@
     <div layout-padding flex layout="column">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <div>
-          <h2>Registro Comité</h2><br>
+          <h3>Registro Comité</h3><br>
         </div>
       </div>
       <div layout-xs="column" class="datos">
@@ -12,7 +12,7 @@
             <md-input-container class="md-icon-float md-block">
               <label>Nombre Comité</label>
               <md-icon md-svg-src="/assets/img/namecomite.svg" class="name"></md-icon>
-              <input ng-model="vm.comite.nombre" type="">
+              <input ng-model="vm.comite.nombre" type="text">
             </md-input-container>
           </div>
           <div flex>
