--- a/src/app/components/registroRapido/registroRapidoCliente.html
+++ b/src/app/components/registroRapido/registroRapidoCliente.html
@@ -3,7 +3,7 @@
     <div layout-padding flex layout="column">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <div>
-          <h2>Actualizar Datos de Cliente</h2><br>
+          <h2>Registrar Socio</h2><br>
         </div>
       </div>
       <div layout-xs="column" class="datos">
@@ -70,15 +70,10 @@
         </div>
       </div>
       <div layout="row" layout-align="center center" flex layout-xs="column" class="datos">
-        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.actualizarcliente(vm.cliente)">Actualizar Cliente</md-button>
+        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearcliente(vm.cliente)">Siguiente</md-button>
       </div>
-      <div layout="row" layout-align="end center" flex layout-xs="column" ng-if="vm.usuario.superadmin == 1">
-        <md-button class="md-icon-button md-raised" layout-fill ui-sref="tabla">
-          <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
-        </md-button>
-      </div> 
-      <div layout="row" layout-align="end center" flex layout-xs="column" ng-if="vm.usuario.superadmin == 0">
-        <md-button class="md-icon-button md-raised" layout-fill ui-sref="tabla">
+      <div layout="row" layout-align="end center" flex layout-xs="column">
+        <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuRegistros">
           <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
         </md-button>
       </div> 
