--- a/src/app/components/toolbar/toolbar.html
+++ b/src/app/components/toolbar/toolbar.html
@@ -1,12 +1,12 @@
 <div layout="row" style="height: 100%;">
-  <md-sidenav flex-lg="20" flex-md="20" flex-sm flex-order-sm flex-xs flex-order-gt-xs ng-if="vm.vista"
-    class="md-sidenav-left" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
+  <md-sidenav flex-lg="20" flex-md="20" flex-sm="20" flex-order-sm flex-xs flex-order-gt-xs ng-if="vm.vista"
+    class="md-sidenav-left" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="8">
     <md-toolbar class="md-theme-indigo table"  md-colors="{background: 'light-blue-600'}">
       <div layout="row" layout-align="center center">
         <img src="/assets/img/Administrador.png" class="imag"></img>
         <div layout-padding layout="column">
           <div>
-            <h3 class="admin">{{ vm.usuario.nombre_usu }}</h3>
+            <h4 class="admin">{{ vm.usuario.nombre_usu }}</h4>
             <h6 class="info">{{ vm.usuario.rol}}</h6>
           </div>
         </div>
@@ -44,7 +44,12 @@
       <div layout="column" ng-if="vm.usuario.superadmin == 1">
         <div layout="column">
           <md-button class="texto" ui-sref="menuAdmin" ng-click="vm.toggleLeft()">
-            <md-icon md-svg-src="/assets/img/registros.svg"></md-icon>Menú Principal
+            <md-icon md-svg-src="/assets/img/registros.svg"></md-icon>Comités
+          </md-button>
+        </div>
+        <div layout="column">
+          <md-button class="texto" ui-sref="allClients" ng-click="vm.toggleLeft()">
+            <md-icon md-svg-src="/assets/img/registros.svg"></md-icon>Otros Registros
           </md-button>
         </div>
         <div flex layout="column" class="separar">
@@ -67,6 +72,7 @@
           <md-icon md-svg-icon="/assets/img/menu.svg"></md-icon>
         </md-button>
         <h2 flex md-truncate>Agua Potable Rural</h2>
+        <h5 flex md-truncate style="margin-right: -90px;" ng-if="vm.usuario.superadmin == 0">{{ vm.usuario.comite.nombre }}</h5>
         <md-button class="sesion" ng-if="!vm.isLogged" ui-sref="login">
           Iniciar Sesión
         </md-button>
